--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Fordonsbolaget</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700|Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700|Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
+    <link href='http://cdn.jsdelivr.net/g/bootstrap@3.3.6(css/bootstrap-theme.min.css+css/bootstrap.min.css)' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <section class="page-header">
@@ -21,6 +22,6 @@
 
     </section>
 
-  
+  <script src="https://cdn.jsdelivr.net/g/bootstrap@3.3.6,jquery@2.2.0" defer />
   </body>
 </html>
