--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <!-- /.container -->
 
 
-<script src="https://cdn.jsdelivr.net/g/bootstrap@3.3.6,jquery@2.2.0"/>
+<script src="https://cdn.jsdelivr.net/g/bootstrap@3.3.6,jquery@2.2.0"></script>
 </body>
 
 </html>
