--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
     <title>Fordonsbolaget</title>
 
-    <!-- Core CSS -->
+    <!-- Core CSS  
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700|Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
+    -->
     <link href='http://cdn.jsdelivr.net/g/bootstrap@3.3.6(css/bootstrap-theme.min.css+css/bootstrap.min.css)' rel='stylesheet' type='text/css'>
 
     <!-- Custom CSS -->
@@ -82,7 +83,17 @@
     <!-- /.container -->
 
 
-<script src="https://cdn.jsdelivr.net/g/bootstrap@3.3.6,jquery@2.2.0"></script>
+<script src="https://cdn.jsdelivr.net/g/bootstrap@3.3.6,jquery@2.2.0,webfontloader@1.6.21"></script>
+<script>
+WebFontConfig = {
+  google: {
+    families: ['Open Sans', 'Source Sans Pro']
+  }
+  active: function() {
+    sessionStorage.fonts = true;
+  }
+};
+</script>
 </body>
 
 </html>
