--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <!-- /.container -->
 
 
-<script src="https://cdn.jsdelivr.net/g/bootstrap@3.3.6,jquery@2.2.0,webfontloader@1.6.21"></script>
+<script src="https://cdn.jsdelivr.net/g/jquery@2.2.0,bootstrap@3.3.6,webfontloader@1.6.21"></script>
 <script>
 WebFontConfig = {
   google: {
