--- a/index.html
+++ b/index.html
@@ -17,12 +17,7 @@
     <link href='http://cdn.jsdelivr.net/g/bootstrap@3.3.6(css/bootstrap-theme.min.css+css/bootstrap.min.css)' rel='stylesheet' type='text/css'>
 
     <!-- Custom CSS -->
-    <style>
-    body {
-        padding-top: 70px;
-        /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-    }
-    </style>
+    <link href='/css.css' rel='stylesheet' type='text/css'>
 
     <!--[if lt IE 9]>
         <script src="https://cdn.jsdelivr.net/g/html5shiv@3.7.3,respond@1.4.2"></script>
@@ -84,16 +79,7 @@
 
 
 <script src="https://cdn.jsdelivr.net/g/jquery@2.2.0,bootstrap@3.3.6,webfontloader@1.6.21"></script>
-<script>
-WebFontConfig = {
-  google: {
-    families: ['Open Sans', 'Source Sans Pro']
-  },
-  active: function() {
-    sessionStorage.fonts = true;
-  }
-};
-</script>
+<script src="/js.js"></script>
 </body>
 
 </html>
